@@ -5,6 +5,7 @@ version 0.77.01
 	Reading exposure submode field (K-x, K-7, K-5, K-r, K-m/K2000)
 	Image format handling bugfix
 	Better formatting of human readable status info
+	--color_space
 
 version 0.77.00 ( 2011-07-18 )
 	--warnings switch
